Upgrades to project documentation and several embeddings providers.